--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     ],
     "require": {
         "php": "^7.2 | ^8.0",
-        "laravel/framework": "^6.0 | ^7.0 | ^8.0",
-        "illuminate/contracts": "^8.0"
+        "laravel/framework": "^6.0 | ^7.0 | ^8.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
