--- a/composer.json
+++ b/composer.json
@@ -28,15 +28,21 @@
         "laravel/framework": "^6.0 | ^7.0 | ^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^7.5 | ^8.0 | ^9.0",
+        "mockery/mockery": "^1.3.3",
+        "orchestra/testbench": "^4.0 | ^5.0 | ^6.0",
+        "orchestra/database": "^4.0 | ^5.0 | ^6.0"
     },
     "autoload": {
         "psr-4": {
-            "HashmatWaziri\\LaravelMultiAuthImpersonate\\": "src",
-            "HashmatWaziri\\LaravelMultiAuthImpersonate\\Database\\Factories\\": "database/factories"
-        }
+            "HashmatWaziri\\LaravelMultiAuthImpersonate\\": "src/"
+
+        },
+        "files": [
+            "src/helpers.php"
+        ]
     },
+
     "autoload-dev": {
         "psr-4": {
             "HashmatWaziri\\LaravelMultiAuthImpersonate\\Tests\\": "tests"
