--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,9 @@
         "laravel/framework": "^10.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5.10",
-        "mockery/mockery": "^1.4.4",
-        "orchestra/testbench": "^7.0",
-        "laravel/ui": "^3.0"
+        "phpunit/phpunit": "^10.0",
+        "mockery/mockery": "^1.4.4"
+
     },
     "autoload": {
         "psr-4": {
