--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     ],
     "require": {
         "php": "^8.0.2",
-        "laravel/framework": "^10.0"
+        "laravel/framework": "^10.0",
+        "laravel/ui": "v4.2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
